plugins {
    id 'scala'
    id 'checkstyle'
    id 'com.github.alisiikh.scalastyle' version '3.3.1'
    id 'org.jetbrains.intellij' version '0.4.21'
    id 'org.sonarqube' version '3.0'
    id 'jacoco'
    id 'maven-publish'
}

group 'fi.aalto.cs'
version '1.1'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    compile group: 'commons-io', name: 'commons-io', version: '2.6'
    compile group: 'net.lingala.zip4j', name: 'zip4j', version: '2.3.0'
    compileOnly group: 'org.scala-lang', name: 'scala-library', version: '2.12.10'
    implementation group: 'org.json', name: 'json', version: '20190722'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.2.4'
    testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.2'
    testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.2'
    testCompile group: 'org.scala-lang', name: 'scala-library', version: '2.12.10'
    testCompile('io.rest-assured:rest-assured:4.2.0') {
        exclude group:'org.codehaus.groovy', module: 'groovy-xml'
    }
}

intellij {
    //  this is the version of the IntelliJ IDEA API (SDK) used to build the plugin
    version '2020.2'
    plugins = ['java', 'org.intellij.scala:2020.2.23']
}

publishPlugin {
    token = System.getenv('INTELLIJ_PUBLISH_TOKEN')
    channels = [System.getenv('INTELLIJ_PUBLISH_CHANNEL')]
}

checkstyle {
    configFile = file('checkstyle/google_checks.xml')
    maxWarnings = 0
}

scalastyle {
    config = file('scalastyle/scalastyle-checks.xml')
    scalaVersion = '2.12'
    failOnWarning = true
    sourceSets {
        test {
            skip = true
        }
    }
}

task gatherBuildInfo(dependsOn: processResources) {
    doLast {
        new File("$buildDir/resources/main/build-info.properties").withWriter { writer ->
            Properties props = new Properties()
            props['version'] = version
            props.store(writer, null)
        }
    }
}

classes.dependsOn gatherBuildInfo

check.dependsOn jacocoTestReport

jacocoTestReport {
    reports.xml.enabled true
}
